@@ -1,3 +1,8 @@
+2009-09-17 Jim Garlick <garlick@llnl.gov>
+
+	* src/scrub.c, src/util.c, src/util.h, man/scrub.1.in : Add -L
+	option to modfiy symlink handling [Timothy Boronczyk]
+	
 2009-07-29 Jim Garlick <garlick@llnl.gov>
 
 	* : tag 2.2
